--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<li>
 										<i class="node-icon"><img src="img/tbl.svg"></i>
 										<span class="time" style="color:#2ECC71">2022-4-17</span>
-										<span class="txt" style="color:#2ECC71">建立<a href="https://niufuyu-nfy.github.io/" target="_blank" style="color:#2ECC71">Mr. Niu | 高级CV攻城狮</a></span>
+										<span class="txt" style="color:#2ECC71">建立<a href="https://niufuyu855.github.io/" target="_blank" style="color:#2ECC71">Mr. Niu | 高级CV攻城狮</a></span>
 									</li>
 									<li>
 										<i class="node-icon"><img src="img/tb.svg"></i>
@@ -121,7 +121,7 @@
 			<img src="img/China.svg" style="width:60px;right:0px;position:fixed;bottom:0px;" /><!-- 右下角国旗 -->
 		<div class="footer"><!-- 底部版权 -->
 				<span id="sitetime"></span><!-- 运行时间 -->
-				<br>Copyright © 2022 <a href="https://niufuyu-nfy.github.io/" "_blank" target="_blank">Mr. Niu | 高级CV攻城狮</a>
+				<br>Copyright © 2022 <a href="https://niufuyu855.github.io/" "_blank" target="_blank">Mr. Niu | 高级CV攻城狮</a>
 			</div><!-- 版权结束 -->
 		<div id="tp-weather-widget"></div><!-- 天气插件 -->
 		
