--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
 								<ul>
 									<li>
 										<i class="node-icon"><img src="img/tbl.svg"></i>
-										<span class="time" style="color:#2ECC71">2022-4-17</span>
-										<span class="txt" style="color:#2ECC71">建立<a href="https://niufuyu855.github.io/" target="_blank" style="color:#2ECC71">Mr. Niu | 高级CV攻城狮</a></span>
+										<span class="time" style="color:#2ECC71">2022-4-21</span>
+										<span class="txt" style="color:#2ECC71">期中考试</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2022-4-20</span>
+										<span class="txt">期中考试</span>
+									</li>
+									<li>
+										<i class="node-icon"><img src="img/tb.svg"></i>
+										<span class="time">2021-9-6</span>
+										<span class="txt">建立<a href="https://niufuyu855.github.io/" target="_blank" style="color:#2ECC71">Mr. Niu | 高级CV攻城狮</a></span>
 									</li>
 									<li>
 										<i class="node-icon"><img src="img/tb.svg"></i>
