--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </div>
 </div>
 						<div style="color:#aaa;text-align:center;font-size:12px">
-								注: 上下滑动查看历史进程
+								注: 上下滑动查看所有站点
 					</section><!-- 站点结束 -->
 				</div><!-- 内容结束 -->
 			</div><!-- 主体结束 -->
