--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<div id="boxs1">
 								<div class="track-list">
 								<ul>
-							    <a href="https://dh.niufuyu.top/" target="_blank"><div class="web">Mr. Niu导航</div></a><!-- 站点一 -->
+							    <a href="https://dh.niufuyu.top/" target="_blank"><div class="web">NIUIO导航</div></a><!-- 站点一 -->
 						            <a href="https://blog.niufuyu.top/" target="_blank"><div class="web">Mr. Niu小站</div></a><!-- 站点二 -->
 						            <a href="https://tools.niufuyu.top/" target="_blank"><div class="web">Mr. Niu工具箱</div></a><!-- 站点三 -->
 						            <a href="https://niufuyu855.github.io/tools/" target="_blank"><div class="web">Mr. Niu工具箱(Github)</div></a><!-- 站点四 -->
