--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="KEYWords" contect="NIUTE,个人主页,个人引导页">
 		<meta name="DEscription" contect="阿付的个人引导页">
-		<meta name="Author" contect="NIUIO">
+		<meta name="Author" contect="NIUTE">
 		<meta name="Robots" contect= "all">
                    <link rel="Shortcut Icon" href="https://off.cx/avatar.jpg"/>
 		<link rel="stylesheet"  href="style.css">
@@ -25,7 +25,7 @@
 					<div class="main"><!-- 首页内容 -->
 						<img src="img/bgo.jpg" class="bgo" />
 						<img src="https://off.cx/avatar.jpg" class="ato" onclick="alert('戳我干嘛 ￣へ￣')" />
-						<div class="name" onclick="javascript:this.innerHTML=(this.innerHTML=='阿付'?'yue°':'阿付');">Niute Fony</div>
+						<div class="name" onclick="javascript:this.innerHTML=(this.innerHTML=='阿付'?'yue°':'阿付');">Niute</div>
 						<div class="motto" onclick="javascript:this.innerHTML=(this.innerHTML=='心存敬畏 行有所止'?'yue in awe and sip':'心存敬畏 行有所止');">心存敬畏 行有所止</div>
 						<div class="navo">
 							<ul>
