--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<img src="img/China.svg" style="width:60px;right:0px;position:fixed;bottom:0px;" /><!-- 右下角国旗 -->
 		<div class="footer"><!-- 底部版权 -->
 				<span id="sitetime"></span><!-- 运行时间 -->
-				<br>Copyright © 2022 <a href="https://niufuyu855.github.io/" target="_blank">NIUIO | 高级CV攻城狮</a> <a href="https://niufuyu855.github.io/status/">状态监控</a>
+				<br>Copyright © 2022 <a href="https://niufuyu855.github.io/" target="_blank">Niute Fony | 屑CV攻城狮</a> <a href="https://niufuyu855.github.io/status/">状态监控</a>
 			</div><!-- 版权结束 -->
 		<div id="tp-weather-widget"></div><!-- 天气插件 -->
 		
