--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Niute Fony | 屑CV攻城狮</title>   
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="KEYWords" contect="NIUTE,个人主页,个人引导页">
-		<meta name="DEscription" contect="阿付的个人引导页">
+		<meta name="DEscription" contect="Niuteの个人引导页">
 		<meta name="Author" contect="NIUTE">
 		<meta name="Robots" contect= "all">
                    <link rel="Shortcut Icon" href="https://off.cx/avatar.jpg"/>
