--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
-		<title>Niute Fony | 屑CV攻城狮</title>   
+		<title>Niute | 屑CV攻城狮</title>   
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="KEYWords" contect="NIUTE,个人主页,个人引导页">
 		<meta name="DEscription" contect="Niuteの个人引导页">
